syntax = "proto3";

package waffle.guam.immigration.api.user;

option java_outer_classname = "UserServiceProto";

import "user/User.proto";

// service
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUserDevice(UpdateUserDeviceRequest) returns (Empty);
  rpc sendPush(SendUserPush) returns (Empty);
}

// request
message GetUserRequest {
  string token = 1;
}

message UpdateUserDeviceRequest {
  string token = 1;
  string deviceId = 2;
}

message SendUserPush {
  repeated int64 userIds = 1;
  string title = 2;
  string body = 3;
  OptionalString imageUrl = 4;
}

// response
message GetUserResponse {
  User user = 1;
}

message Empty {}